# protobuf

./: .gitignore  LICENSE  Setup.hs  package.yaml  protobuf.cabal  protobuf3.cabal  stack.yaml
app/: Main.hs  Options.hs
bench/: SearchResponse.proto  SearchResponse2.proto  Test3.proto
bench/encode-decode/: Main.hs
bench/encode-decode/Autogen/: SearchResponse.hs  SearchResponse2.hs  Test3.hs
bench/encode-decode/Autogen/SearchResponse2/: Result.hs
bench/encode-decode/Autogen/Test3/: Extra.hs  Result.hs
bench/encode-decode/Proto/Bench/: SearchResponse.hs  SearchResponse2.hs  Test3.hs
bench/proto-lens/: Main.hs
bench/protobuf3/: Main.hs
bench/protoc/: Main.hs
src/: Lib.hs
src/Data/: Protobuf.hs
src/Data/Protobuf/: CodeGen.hs  Encoding.hs  Parser.hs  ProtoSpec.hs  Types.hs
src/Data/Protobuf/Parser/: Internal.hs
src/Data/Tree/: ScopeTree.hs
test/: Spec.hs
test-data/genFiles/: test1-input.txt  test1-output.txt  test2-input.txt  test2-output.txt  test3-input.txt  test3-output.txt
test-data/proto3File/: test2-output.txt  test3-input.txt  test6-output.txt
test-data/protoSpec/: test1-input.txt  test1-output.txt  test2-input.txt  test3-input.txt  test3-output.txt
test-data/protoSpecBody/: test1-input.txt  test1-output.txt  test2-input.txt  test2-output.txt  test3-input.txt  test3-output.txt
test/Data/Protobuf/: CodeGenSpec.hs  ParserSpec.hs
test/Data/Protobuf/Parser/: Tests.hs
test/Data/Tree/: ScopeTreeSpec.hs
test/Data/Tree/ScopeTree/: Tests.hs
